@@ -1636,4 +1636,6 @@
 /(?<=abc)(|def)/g,utf,replace=<$0>
       123abcáyzabcdef789abcሴqr
 
+/[^\xff]((?1))/utf,debug
+
 # End of testinput5 
